Doc: added swagger documentation
